--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -12,6 +12,8 @@
 
     <!-- link css -->
     <link rel="stylesheet" href="styles/styleSignUp.css">
+    <!-- links para css erros -->
+    <link rel="stylesheet" href="styles/stylesForErrors.css">
     <!-- link font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,8 +32,8 @@
             <div class="contentYourInstrument">
 
                 <label class="cardYourInstruments">
-                    <input name="itemIntruments" class="radioYourInstruments" id="inputInstrumento" value="1"
-                        type="radio" id="" checked>
+                    <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="1"
+                        type="radio" checked>
                     <span class="contentCardYourInstruments">
                         <span class="nameOfInstruments">
                             <h3>Violão</h3>
@@ -43,96 +45,17 @@
                 </label>
 
                 <label class="cardYourInstruments">
-                    <input name="itemIntruments" class="radioYourInstruments" id="inputInstrumento" value="1"
-                        type="radio" id="" checked>
+                    <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="2"
+                        type="radio" >
                     <span class="contentCardYourInstruments">
                         <span class="nameOfInstruments">
-                            <h3>Violão</h3>
+                            <h3>Violino</h3>
                         </span>
                         <span class="imgOfInstruments">
                             <img src="assets/imgs/guitar.png" alt="">
                         </span>
                     </span>
                 </label>
-
-                <label class="cardYourInstruments">
-                    <input name="itemIntruments" class="radioYourInstruments" id="inputInstrumento" value="1"
-                        type="radio" id="" checked>
-                    <span class="contentCardYourInstruments">
-                        <span class="nameOfInstruments">
-                            <h3>Violão</h3>
-                        </span>
-                        <span class="imgOfInstruments">
-                            <img src="assets/imgs/guitar.png" alt="">
-                        </span>
-                    </span>
-                </label>
-
-                <label class="cardYourInstruments">
-                    <input name="itemIntruments" class="radioYourInstruments" id="inputInstrumento" value="1"
-                        type="radio" id="" checked>
-                    <span class="contentCardYourInstruments">
-                        <span class="nameOfInstruments">
-                            <h3>Violão</h3>
-                        </span>
-                        <span class="imgOfInstruments">
-                            <img src="assets/imgs/guitar.png" alt="">
-                        </span>
-                    </span>
-                </label>
-
-                <label class="cardYourInstruments">
-                    <input name="itemIntruments" class="radioYourInstruments" id="inputInstrumento" value="1"
-                        type="radio" id="" checked>
-                    <span class="contentCardYourInstruments">
-                        <span class="nameOfInstruments">
-                            <h3>Violão</h3>
-                        </span>
-                        <span class="imgOfInstruments">
-                            <img src="assets/imgs/guitar.png" alt="">
-                        </span>
-                    </span>
-                </label>
-
-                <label class="cardYourInstruments">
-                    <input name="itemIntruments" class="radioYourInstruments" id="inputInstrumento" value="1"
-                        type="radio" id="" checked>
-                    <span class="contentCardYourInstruments">
-                        <span class="nameOfInstruments">
-                            <h3>Violão</h3>
-                        </span>
-                        <span class="imgOfInstruments">
-                            <img src="assets/imgs/guitar.png" alt="">
-                        </span>
-                    </span>
-                </label>
-
-                <label class="cardYourInstruments">
-                    <input name="itemIntruments" class="radioYourInstruments" id="inputInstrumento" value="1"
-                        type="radio" id="" checked>
-                    <span class="contentCardYourInstruments">
-                        <span class="nameOfInstruments">
-                            <h3>Violão</h3>
-                        </span>
-                        <span class="imgOfInstruments">
-                            <img src="assets/imgs/guitar.png" alt="">
-                        </span>
-                    </span>
-                </label>
-
-                <label class="cardYourInstruments">
-                    <input name="itemIntruments" class="radioYourInstruments" id="inputInstrumento" value="1"
-                        type="radio" id="" checked>
-                    <span class="contentCardYourInstruments">
-                        <span class="nameOfInstruments">
-                            <h3>Violão</h3>
-                        </span>
-                        <span class="imgOfInstruments">
-                            <img src="assets/imgs/guitar.png" alt="">
-                        </span>
-                    </span>
-                </label>
-
             </div>
 
             <div class="yourLevel">
@@ -173,23 +96,35 @@
 
 
             <button onclick="cadastrar()" class="buttonSignUp">Cadastrar</button>
+
+            <div class="divError">
+                <h3 id="div_erros_login"></h3>
+                <div id="div_aguardar" class="loading-div">
+                    <img src="assets/gifs/testeLoading.gif" alt="" class="gif-loading">
+                </div>
+
+                <span id="mensagem_erro">
+                    <!-- <img class="imgConfirmation" src="" alt=""> -->
+                </span>
+            </div>
             <h3>já tem uma conta? <a href="login.html">Conecte-se</a> </h3>
         </div>
     </div>
+   
 </body>
 
 </html>
 
 <script>
     function cadastrar() {
-        // aguardar();
+        aguardar();
 
         //Recupere o valor da nova input pelo nome do id
         // Agora vá para o método fetch logo abaixo
         var nomeVar = nome_input.value;
         var emailVar = email_input.value;
         var senhaVar = senha_input.value;
-        var instrumentoVar = inputInstrumento.value;
+        var instrumentoVar =document.querySelector('input[name="itemInstruments"]:checked').value;
         var confirmacaoSenhaVar = confirmacao_senha_input.value;
 
         var nomeVerifi = document.getElementById("nome_input");
@@ -208,7 +143,7 @@
             imgError1.style.display = "flex"
             msgError1.className = "msgErrorActive"
             msgError1.innerHTML = "Este campo é de preenchimento obrigatório"
-            // finalizarAguardar()
+            finalizarAguardar();
             return false;
 
         } else if (nomeVar.length < 3) {
@@ -216,7 +151,7 @@
             imgError1.style.display = "flex"
             msgError1.className = "msgErrorActive"
             msgError1.innerHTML = "Tamanho inválido"
-            // finalizarAguardar()
+            finalizarAguardar();
             return false;
         }
         // nome válido
@@ -235,7 +170,7 @@
             imgError2.style.display = "flex"
             msgError2.className = "msgErrorActive"
             msgError2.innerHTML = "Este campo é de preenchimento obrigatório"
-            // finalizarAguardar()
+            finalizarAguardar();
             return false;
 
         } else if (emailVar.indexOf("@") < 0) {
@@ -243,7 +178,7 @@
             imgError2.style.display = "flex"
             msgError2.className = "msgErrorActive"
             msgError2.innerHTML = `insira @ no E-Mail`
-            //  finalizarAguardar()
+             finalizarAguardar();
             return false;
 
         } else if (emailVar.indexOf(".com") < 0) {
@@ -251,7 +186,7 @@
             imgError2.style.display = "flex"
             msgError2.className = "msgErrorActive"
             msgError2.innerHTML = `insira .com `
-            // finalizarAguardar()
+            finalizarAguardar();
             return false;
 
         } else if (emailVar.indexOf("@") + 5 > emailVar.indexOf(".com")) {
@@ -259,7 +194,7 @@
             imgError2.style.display = "flex"
             msgError2.className = "msgErrorActive"
             msgError2.innerHTML = `insira um E-mail válido`
-            // finalizarAguardar()
+            finalizarAguardar()
             return false;
 
         }
@@ -268,7 +203,7 @@
             imgError2.style.display = "flex"
             msgError2.className = "msgErrorActive"
             msgError2.innerHTML = `insira @ antes do .com`
-            // finalizarAguardar()
+            finalizarAguardar()
             return false;
 
 
@@ -277,7 +212,7 @@
             imgError2.style.display = "flex"
             msgError2.className = "msgErrorActive"
             msgError2.innerHTML = `insira um E-mail válido`
-            // finalizarAguardar()
+            finalizarAguardar()
             return false;
         }
         // E-mail aceito
@@ -297,14 +232,14 @@
             imgError3.style.display = "flex"
             msgError3.className = "msgErrorActive"
             msgError3.innerHTML = "Este campo é de preenchimento obrigatório"
-            // finalizarAguardar()
+            finalizarAguardar()
             return false;
         } else if (senhaVar.length < 4) {
             senha_input.className = "inputError"
             imgError3.style.display = "flex"
             msgError3.className = "msgErrorActive"
             msgError3.innerHTML = "Insira uma senha maior"
-            // finalizarAguardar()
+            finalizarAguardar()
             return false;
         }
         else {
@@ -323,7 +258,7 @@
             imgError4.style.display = "flex"
             msgError4.className = "msgErrorActive"
             msgError4.innerHTML = "Este campo é de preenchimento obrigatório"
-            // finalizarAguardar()
+            finalizarAguardar()
             return false;
 
         } else if (senhaVar != confirmacaoSenhaVar) {
@@ -331,7 +266,7 @@
             imgError4.style.display = "flex"
             msgError4.className = "msgErrorActive"
             msgError4.innerHTML = "Insira a senha correta"
-            // finalizarAguardar()
+            finalizarAguardar()
             return false;
 
         }
@@ -343,7 +278,7 @@
             msgError4.innerHTML = `Senha correta`
             // setInterval(sumirMensagem, 5000)
         }
-
+        
 
         // Enviando o valor da nova input
         fetch("/usuarios/cadastrar", {
@@ -366,14 +301,16 @@
 
             if (resposta.ok) {
                 // cardErro.style.display = "block";
-                // mensagem_erro.innerHTML = "Cadastro realizado com sucesso! Redirecionando para tela de Login...";
+
+                // mensagem_erro.style.display = "block"
+                mensagem_erro.innerHTML = `<img src="assets/gifs/confirmGif.gif" alt="">`
 
                 setTimeout(() => {
                     window.location.href = "login.html";
                 }, "2000")
 
                 limparFormulario();
-                finalizarAguardar();
+                
             } else {
                 throw ("Houve um erro ao tentar realizar o cadastro!");
             }
