--- a/public/login.html
+++ b/public/login.html
@@ -13,6 +13,8 @@
     <!-- link css -->
     <link rel="stylesheet" href="styles/styleSignUp.css">
     <link rel="stylesheet" href="styles/styleSignIn.css">
+    <!-- links para css erros -->
+    <link rel="stylesheet" href="styles/stylesForErrors.css">
     <!-- link font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,7 +49,17 @@
             <img id="imgError3" class="simbolError" src="assets/imgs/Error.png" alt="" >
 
             <button onclick="entrar()" class="buttonSignUp">Entrar</button>
+            
+            <div class="divError">
+                <h3 id="div_erros_login"></h3>
+                <div id="div_aguardar" class="loading-div">
+                    <img src="assets/gifs/testeLoading.gif" alt="" class="gif-loading">
+                </div>
 
+                <span id="mensagem_erro">
+                    <!-- <img class="imgConfirmation" src="" alt=""> -->
+                </span>
+            </div>
             <h3>Ainda não criou sua conta? <a href="cadastro.html">Cadastre-se</a> </h3>
         </div>
     </div>
@@ -58,7 +70,7 @@
 <script>
 
     function entrar() {
-        // aguardar();
+        aguardar();
 
         var emailVar = email_input.value;
         var senhaVar = senha_input.value;
@@ -76,7 +88,7 @@
             imgError2.style.display = "flex"
             msgError2.className = "msgErrorActive"
             msgError2.innerHTML = "Este campo é de preenchimento obrigatório"
-            // finalizarAguardar()
+            finalizarAguardar()
             return false;
 
         }else if(emailVar.indexOf("@") < 0){
@@ -84,7 +96,7 @@
             imgError2.style.display = "flex"
             msgError2.className = "msgErrorActive"
             msgError2.innerHTML = `insira @ no E-Mail`
-            //  finalizarAguardar()
+             finalizarAguardar()
             return false;
 
         }else if(emailVar.indexOf(".com")<0){
@@ -92,7 +104,7 @@
             imgError2.style.display = "flex"
             msgError2.className = "msgErrorActive"
             msgError2.innerHTML = `insira .com `
-            // finalizarAguardar()
+            finalizarAguardar()
             return false;
 
         }else if(emailVar.indexOf("@")+5 > emailVar.indexOf(".com")){
@@ -100,7 +112,7 @@
             imgError2.style.display = "flex"
             msgError2.className = "msgErrorActive"
             msgError2.innerHTML = `insira um E-mail válido`
-            // finalizarAguardar()
+            finalizarAguardar()
             return false;
 
         }
@@ -109,7 +121,7 @@
             imgError2.style.display = "flex"
             msgError2.className = "msgErrorActive"
             msgError2.innerHTML = `insira @ antes do .com`
-            // finalizarAguardar()
+            finalizarAguardar()
             return false;
 
 
@@ -118,7 +130,7 @@
             imgError2.style.display = "flex"
             msgError2.className = "msgErrorActive"
             msgError2.innerHTML = `insira um E-mail válido`
-            // finalizarAguardar()
+            finalizarAguardar()
             return false;
         }
         // E-mail aceito
@@ -138,14 +150,14 @@
             imgError3.style.display = "flex"
             msgError3.className = "msgErrorActive"
             msgError3.innerHTML = "Este campo é de preenchimento obrigatório"
-            // finalizarAguardar()
+            finalizarAguardar()
             return false;
         }else if(senhaVar.length < 4){
             senha_input.className = "inputError"
             imgError3.style.display = "flex"
             msgError3.className = "msgErrorActive"
             msgError3.innerHTML = "Insira uma senha maior"
-            // finalizarAguardar()
+            finalizarAguardar()
             return false;
         }
         else {
@@ -184,14 +196,14 @@
 
                     setTimeout(function () {
                         window.location = "dashboard/dashboard.html";
-                    }, 1000); // apenas para exibir o loading
+                    }, 2000); // apenas para exibir o loading
 
                 });
 
             } else {
 
                 console.log("Houve um erro ao tentar realizar o login!");
-
+                div_erros_login.innerHTML="usuario igual"
                 resposta.text().then(texto => {
                     console.error(texto);
                     finalizarAguardar(texto);
