chat praticamente pronto, só falta as validações de campo vazio

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -45,9 +45,9 @@
                 </div>
                 <div class="divGoCommunity">
                     <div class="divContentGoCommunity">
-                        <h2>Conheça Nossa Biblioteca de acordes</h2>
-                        <button class="btnBanner btnGoCommunity"><img src="../assets/imgsDash/right-arrow.png"
-                                alt=""></button>
+                        <h2>Participe da nossa comunidade</h2>
+                        <button class="btnBanner btnGoCommunity"><a href="forum.html"><img src="../assets/imgsDash/right-arrow.png"
+                                alt=""></a></button>
                     </div>
                 </div>
             </div>
