layout parcialmente para menos pronto // covers

--- a/public/dashboard/forum.html
+++ b/public/dashboard/forum.html
@@ -29,7 +29,9 @@
     <title>YMusic | Fórum</title>
 </head>
 
-<body onload="validarSessao(),atualizarFeed()">
+<!-- <body onload="validarSessao(),atualizarFeed()"> -->
+    <body>
+        
 <div class="divContentAll">
     <div class="sideBar">
         <div class="userSide">
@@ -42,7 +44,7 @@
             </div>
             <div class="itemSideBar">
                 <i class="fa fa-solid fa-guitar"></i>
-                <a href="">Covers</a>
+                <a href="covers.html">Covers</a>
             </div>
         </div>
         <div class="divBack">
