--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -26,7 +26,7 @@
     <title>YMusic | Comunidade</title>
 </head>
 
-<body onload="validarSessao()">
+<!-- <body onload="validarSessao()"> -->
     <div class="divMain">
         <div class="divContentMain">
             <div class="divUserDash">
