--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
         </header>
 
         <div class="contentSlogan">
-            <h1>Fazer musica é <br>sim para todo.</h1>
+            <h1>Fazer musica é <br>sim para todos.</h1>
             <p>Um lugar onde você pode conhecer um <br>pouco do universo imenso da musica.</p>
             <h3>
                 Vá em frente e se divirta.
